--- a/css/style.scss
+++ b/css/style.scss
@@ -1,125 +1,99 @@
 // Common CSS
 
-html{
-    font-size: 15px;
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
+html {
+  font-size: 15px;
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
 }
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-*::before, *::after{
-    box-sizing: border-box;
+*::before,
+*::after {
+  box-sizing: border-box;
 }
-
-// Pre Loader
-
-#loading{
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 9999;
-}
-
-#loading::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #fff url("../img/loader-animation.gif") no-repeat center;
-}
-
 
 // fonts
 
 @font-face {
-    font-family: flaction;
-    src: url(../fonts/Flaticon.ttf);
+  font-family: flaction;
+  src: url(../fonts/Flaticon.ttf);
 }
 
 @font-face {
-    font-family: nautilus;
-    src: url(../fonts/nautilus-webfont.woff);
+  font-family: nautilus;
+  src: url(../fonts/nautilus-webfont.woff);
 }
 
 // Variables
 
-$primarycolor:#e75b1e;
-$whitecolor:#fff;
-$blackcolor:#000;
-$secondarycolor:#ffffffc0;
-$primaryfont:flaction;
-$secondaryfont:nautilus;
+$primarycolor: #e75b1e;
+$whitecolor: #fff;
+$blackcolor: #000;
+$secondarycolor: #ffffffc0;
+$primaryfont: flaction;
+$secondaryfont: nautilus;
 
 // Button Mixin
 
-@mixin primarybutton{
-    width: 220px;
-    height: 60px;
-    background-color: $primarycolor;
-    color: $whitecolor;
-    font-weight: bolder;
-    font-size: 1.2rem;
-    border: 3px solid $primarycolor;
+@mixin primarybutton {
+  width: 220px;
+  height: 60px;
+  background-color: $primarycolor;
+  color: $whitecolor;
+  font-weight: bolder;
+  font-size: 1.2rem;
+  border: 3px solid $primarycolor;
 }
 
 // Buttons animation
 
-
-.button{
-    position: relative;
-    z-index: 1;
-    transition: all 500ms ease;
+.button {
+  position: relative;
+  z-index: 1;
+  transition: all 500ms ease;
 }
 
-.button::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0.1px;
-    width: 100%;
-    height: 3px;
-    background-color: $primarycolor;
-    z-index: -1;
-    transform: scaleX(0);
-    transform-origin: center;
-    transition:all 250ms ease-in-out;
+.button::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0.1px;
+  width: 100%;
+  height: 3px;
+  background-color: $primarycolor;
+  z-index: -1;
+  transform: scaleX(0);
+  transform-origin: center;
+  transition: all 250ms ease-in-out;
 }
-button:hover{
-    background: none;
+button:hover {
+  background: none;
 }
-.button:hover::after{
-    transform: scaleX(1);
-    transform-origin: center;
+.button:hover::after {
+  transform: scaleX(1);
+  transform-origin: center;
 }
 
 // include
 
-button{
-    @include primarybutton()
+button {
+  @include primarybutton();
 }
 
 // Fade In Fade Out
 
-.fade-in{
-    opacity: 0;
-    transition: opacity 250ms ease-in;
+.fade-in {
+  opacity: 0;
+  transition: opacity 250ms ease-in;
 }
 
 .fade-in.appear {
-    opacity: 1;
+  opacity: 1;
 }
-
-
 
 // @import
 
